--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,8 @@
 {
   "name": "bs-extension",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap": "~3.3.1"
+  },
   "devDependencies": {}
 }
