--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "bs-extension",
   "version": "0.0.0",
   "dependencies": {
-    "bootstrap": "~3.3.1"
+    "bootstrap": "~3.3.1",
+    "select2": "~3.5.2"
   },
   "devDependencies": {}
 }
