--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "dependencies": {
     "bootstrap": "~3.3.1",
-    "select2": "~3.5.2"
+    "select2": "~3.5.2",
+    "bootstrap-switch": "~3.2.2"
   },
   "devDependencies": {}
 }
